modules/gramps-web/chart/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tailscale-ingress-only
spec:
  ipAllowList:
    sourceRange:
      - 10.42.0.0/16
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gramps-web-ingressroute
  namespace: gramps-web
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gramps.tokhirov.uz`)
      services:
        - name: gramps-web-grampsweb
          namespace: gramps-web
          port: 5000
      middlewares:
        - name: tailscale-ingress-only
  tls:
    certResolver: letsencrypt
